Fix settings relink links

--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -144,7 +144,7 @@
                                             </table>
                                         </div>
                                         <small class="card-footer text-right">
-                                            <a href="/oauth/out/{{ .GetEnum }}" class="mr-2"><i class="fas fa-link"></i> Relink</a>
+                                            <a href="/oauth/out/{{ .GetEnum }}?page=settings" class="mr-2"><i class="fas fa-link"></i> Relink</a>
                                             <a href="/settings/remove-provider/{{ .GetEnum }}"><i class="fas fa-unlink"></i> Unlink</a>
                                         </small>
                                     </div>
