Finish settings providers

--- a/cmd/frontend/assets/sass/_settings.scss
+++ b/cmd/frontend/assets/sass/_settings.scss
@@ -13,4 +13,16 @@
             background: #fff;
         }
     }
+
+    #providers {
+        .card-header {
+            border-bottom: none;
+
+            img {
+                height: 48px;
+                margin-top: -0.75rem;
+                margin-bottom: -0.75rem;
+            }
+        }
+    }
 }
