--- a/cmd/frontend/templates/signup.gohtml
+++ b/cmd/frontend/templates/signup.gohtml
@@ -54,7 +54,7 @@
                                 <p class="mb-2">Or login with:</p>
                                 {{ range $key, $value := .Providers }}
                                     {{ if ne .GetName "Steam" }} {{/* Not OAuth */}}
-                                    <a class="btn btn-lg" href="/oauth/out/{{ .GetEnum }}?page=signup" style="background-color: #{{ .GetColour}}; border-color: #{{ .GetColour}}"><i class="{{ .GetIcon }}"></i> {{ .GetName }}</a>
+                                    <a class="btn btn-lg" href="/oauth/out/{{ .GetEnum }}?page=signup" style="background-color: {{ .GetColour}}; border-color: {{ .GetColour}}"><i class="{{ .GetIcon }}"></i> {{ .GetName }}</a>
                                     {{ end }}
                                 {{ end }}
                             </div>
