--- a/cmd/frontend/assets/sass/_settings.scss
+++ b/cmd/frontend/assets/sass/_settings.scss
@@ -1,4 +1,4 @@
-#settings-page {
+#settings-page, #signup-page {
 
     #password-container {
         input#password {
@@ -13,6 +13,9 @@
             background: #fff;
         }
     }
+}
+
+#settings-page {
 
     #providers {
         .card-header {
