--- a/cmd/frontend/templates/signup.gohtml
+++ b/cmd/frontend/templates/signup.gohtml
@@ -29,7 +29,7 @@
                                         <small>A verification email will be sent here.</small>
                                     </div>
 
-                                    <div class="form-group">
+                                    <div class="form-group" id="password-container">
                                         <label for="password">Password</label>
                                         <input type="password" class="form-control" id="password" name="password" autocomplete="new-password" required>
                                     </div>
