--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -47,6 +47,14 @@
                         <div class="row">
                             <div class="col-12 col-lg-8 mb-3 mb-lg-0">
 
+                                {{ if gt (len .Banners) 0 }}
+                                    <div class="alert alert-danger" role="alert">
+                                        {{ range $k, $v := .Banners }}
+                                            <div>{{ $v }}</div>
+                                        {{ end }}
+                                    </div>
+                                {{ end }}
+
                                 <div class="card mb-2">
                                     <div class="card-header">Settings</div>
                                     <div class="card-body">
