--- a/cmd/frontend/templates/stats_list.gohtml
+++ b/cmd/frontend/templates/stats_list.gohtml
@@ -38,9 +38,9 @@
                         <tr>
                             <th scope="col">{{ .Type.Title }}</th>
                             <th style="width: 15%;" scope="col">Games</th>
-                            <th style="width: 15%;" scope="col">Avg Price</th>
-                            <th style="width: 15%;" scope="col">Avg Score</th>
-                            <th style="width: 15%;" scope="col">Avg Players</th>
+                            <th style="width: 15%;" scope="col">Median Price</th>
+                            <th style="width: 15%;" scope="col">Median Score</th>
+                            <th style="width: 15%;" scope="col">Median Players</th>
                         </tr>
                         </thead>
                         <tbody>
