Improve avatar style

--- a/cmd/frontend/assets/sass/_settings.scss
+++ b/cmd/frontend/assets/sass/_settings.scss
@@ -22,6 +22,8 @@
             border-bottom: none;
 
             img {
+                @include border-top-right-radius($card-inner-border-radius);
+
                 height: 48px;
                 margin-top: -0.75rem;
                 margin-bottom: -0.75rem;
