Format event data

--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -188,9 +188,9 @@
                             <table class="table table-hover table-striped table-counts mb-0" data-row-type="events" data-order='[[0, "desc"]]' data-path="/settings/events.json">
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Type</th>
-                                    <th scope="col">IP</th>
+                                    <th scope="col">Time</th>
+                                    <th scope="col">Event</th>
+                                    <th scope="col">Location (IP)</th>
                                     <th scope="col">User Agent</th>
                                 </tr>
                                 </thead>
