Fix button text

--- a/cmd/frontend/templates/forgot.gohtml
+++ b/cmd/frontend/templates/forgot.gohtml
@@ -23,7 +23,7 @@
 
                                 <form action="/forgot" method="post" data-recaptcha>
                                     <div class="form-group">
-                                        <label for="email">Email</label>
+                                        <label for="email">Email Address</label>
                                         <input type="email" class="form-control" id="email" name="email" value="{{ .LoginEmail }}" autofocus required>
                                     </div>
 
@@ -34,7 +34,7 @@
                                         </div>
                                     {{ end }}
 
-                                    <button type="submit" class="btn btn-success" aria-label="Login">Login</button>
+                                    <button type="submit" class="btn btn-success" aria-label="Login">Send Email</button>
                                 </form>
 
                             </div>
