--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -216,7 +216,7 @@
                         <div class="row">
                             {{ range $key, $value := .Ranks }}
 
-                                <div class="col col-md-6 col-lg-4 col-xl-3">
+                                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                     <div class="card mb-3">
                                         <h5 class="card-header">{{ .Metric.String }}</h5>
                                         <div class="card-body">
