--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -226,6 +226,9 @@
                             <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
+
+                            <div class="dropdown-divider"></div>
+
                             <a class="dropdown-item" href="/api/gamedb">API (Game DB)</a>
                             <a class="dropdown-item" href="/api/steam">API (Steam)</a>
                         </div>
