--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -73,7 +73,11 @@
                                                     <div class="form-group" id="password-container">
                                                         <label for="password">Password</label>
                                                         <input type="password" class="form-control" id="password" placeholder="Password" name="password" autocomplete="new-password">
-                                                        <small class="form-text text-muted">Fill in to change.</small>
+                                                        {{ if eq .User.Password "" }}
+                                                            <small class="form-text text-muted">No password set, OAuth only. Fill in to set.</small>
+                                                        {{ else }}
+                                                            <small class="form-text text-muted">Fill in to change.</small>
+                                                        {{ end }}
                                                     </div>
 
                                                     <div class="form-group">
