Show achievement earned time on app page

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -694,7 +694,8 @@
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Name</th>
-                                    <th scope="col">Completed</th>
+                                    <th scope="col">Earned Time</th>
+                                    <th scope="col">Avg Completion</th>
                                 </tr>
                                 </thead>
                                 <tbody>
