Show achievement earned time on player page

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -693,7 +693,7 @@
                             <table class="table table-hover table-striped table-counts mb-0" data-path="/games/{{ .App.ID }}/achievements.json" data-row-type="players" id="achievements-table">
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">Name</th>
+                                    <th scope="col">Achievement</th>
                                     <th scope="col">Earned Time</th>
                                     <th scope="col">Avg Completion</th>
                                 </tr>
