--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -621,8 +621,8 @@
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Achievement</th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Completed</th>
+                                    <th scope="col">Earned Time</th>
+                                    <th scope="col">Avg Completion</th>
                                 </tr>
                                 </thead>
                                 <tbody>
