--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -114,7 +114,7 @@
                                     <div class="card-header">
                                         <span>API</span>
                                         <h5 class="float-right mb-0">
-                                            <a href="/api" class="badge badge-success">Documentation</a>
+                                            <a href="/api/gamedb" class="badge badge-success">Documentation</a>
                                         </h5>
                                     </div>
                                     <div class="card-body">
