--- a/cmd/frontend/templates/admin/stats.gohtml
+++ b/cmd/frontend/templates/admin/stats.gohtml
@@ -30,6 +30,14 @@
                         <div class="btn btn-success btn-block">Oldest Player<br/>{{ .Oldest }}</div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12 col-lg-3 mb-4">
+                        <div class="btn btn-success btn-block">IP<br/>{{ .IP }}</div>
+                    </div>
+                    <div class="col-12 col-lg-3 mb-4">
+                        <div class="btn btn-success btn-block">Location<br/>{{ .Location }}</div>
+                    </div>
+                </div>
 
             </div>
         </div>
