--- a/cmd/frontend/templates/admin/stats.gohtml
+++ b/cmd/frontend/templates/admin/stats.gohtml
@@ -9,6 +9,7 @@
             {{ template "admin_header" . }}
             <div class="card-body">
 
+                <h5>Version</h5>
                 <div class="row">
                     <div class="col-12 col-lg-3 mb-4">
                         <div class="btn btn-success btn-block">Commit Count<br/>{{ .Commits }}</div>
@@ -17,6 +18,8 @@
                         <div class="btn btn-success btn-block">Commit Hash<br/>{{ .Hash }}</div>
                     </div>
                 </div>
+
+                <h5>Players</h5>
                 <div class="row">
                     <div class="col-12 col-lg-3 mb-4">
                         <div class="btn btn-success btn-block">Private Players<br/>{{ comma64 .Private }}</div>
@@ -24,12 +27,12 @@
                     <div class="col-12 col-lg-3 mb-4">
                         <div class="btn btn-success btn-block">Removed Players<br/>{{ comma64 .Removed }}</div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-12 col-lg-3 mb-4">
                         <div class="btn btn-success btn-block">Oldest Player<br/>{{ .Oldest }}</div>
                     </div>
                 </div>
+
+                <h5>Location</h5>
                 <div class="row">
                     <div class="col-12 col-lg-3 mb-4">
                         <div class="btn btn-success btn-block">IP<br/>{{ .IP }}</div>
